plumb/bundle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plumb-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: api
      protocol: TCP
  selector:
    app: plumb
